Levanta el servidor

--- a/tpoDatos/src/main/resources/application.properties
+++ b/tpoDatos/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=tpoDatos
+
+
+#Cassandra
+spring.cassandra.contact-points=127.0.0.1:9042
+spring.cassandra.keyspace-name=productos
+spring.cassandra.local-datacenter=myDatacenter
+
+#Redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+#MongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=tp
