Intento de creacion de Producto

--- a/tpoDatos/src/main/resources/application.properties
+++ b/tpoDatos/src/main/resources/application.properties
@@ -2,13 +2,15 @@ spring.application.name=tpoDatos
 
 
 #Cassandra
-spring.cassandra.contact-points=127.0.0.1:9042
-spring.cassandra.keyspace-name=productos
-spring.cassandra.local-datacenter=myDatacenter
+spring.cassandra.port=9042
+spring.cassandra.contact-points=127.0.0.1
+spring.cassandra.keyspace-name=tpoDatos
+spring.cassandra.local-datacenter=datacenter1
+spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 
 #Redis
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
 #MongoDB
 spring.data.mongodb.host=localhost
