--- a/tpoDatos/src/main/resources/application.properties
+++ b/tpoDatos/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=tpoDatos
 
-
 #Cassandra
 spring.cassandra.port=9042
 spring.cassandra.contact-points=127.0.0.1
-spring.cassandra.keyspace-name=tpoDatos
+spring.cassandra.keyspace-name=tpodatos
 spring.cassandra.local-datacenter=datacenter1
 spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 
